<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <EditText
    android:id="@+id/first_lat_name"
    android:layout_width="345dp"
    android:layout_height="25dp"
    android:layout_margin="20dp"
    android:paddingLeft="10dp"
    android:background="@drawable/background_input"
    android:hint="@string/firrstLastName"
    android:inputType="textCapWords"
    android:maxLines="1"
    android:singleLine="true" />
  <EditText
    android:id="@+id/phone"
    android:layout_width="345dp"
    android:layout_height="25dp"
    android:layout_marginLeft="20dp"
    android:layout_alignEnd="@+id/first_lat_name"
    android:layout_below="@+id/first_lat_name"
    android:paddingLeft="10dp"
    android:background="@drawable/background_input"
    android:hint="@string/phone"
    android:inputType="phone"
    android:maxLines="1"
    android:singleLine="true" />
  <EditText
    android:id="@+id/email"
    android:layout_width="345dp"
    android:layout_height="25dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@+id/phone"
    android:paddingLeft="10dp"
    android:background="@drawable/background_input"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:maxLines="1"
    android:singleLine="true" />
  <Button
    android:id="@+id/btn_add"
    android:layout_width="120dp"
    android:layout_height="40dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/btn_style"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/email"
    android:text="@string/btn_add" />
  <Button
    android:id="@+id/btn_edit"
    android:layout_width="120dp"
    android:layout_height="40dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/btn_style"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/email"
    android:text="@string/btn_edit" />
</RelativeLayout>